Modified: edits from 11/21 meeting, spacing, fuel sources *creative.css -- changed padding on sections *custom.css -- changed h4 font style -- made sections into flexbox display -- flexbox on contact & fuel sections -- changed portfolio img height and removed frame *index.html -- basic wording edits -- removed button from Bio -- removed gallery prompt text -- changed images from local to imgur -- merge training with fuel sources -- added fuel sources design and text -- added correct contact info

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,6 @@ a {
 
 h2,
 h3,
-h4,
 h5,
 h6 {
   font-family: 'Amatic SC', cursive;
@@ -23,11 +22,12 @@ h3 {
 }
 
 h4 {
+  font-family: 'Oswald', sans-serif;
   font-size: 36px;
 }
 
 header.masthead {
-  background-image: url(../img/eli-dino.jpg);
+  background-image: url(https://i.imgur.com/NqaJzCB.jpg);
   border-color: pink;
   border-width: 5px;
   height: 800px;
@@ -40,7 +40,15 @@ border-color: #FFB515; }
 
 p {
   font-family: 'Oswald', sans-serif;
-  font-size: 24px;
+  font-size: 22px;
+}
+
+section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 700px;
 }
 
 .bg-primary {
@@ -55,8 +63,47 @@ background-color: #0699D1 !important; }
     .btn-primary:active, .btn-primary:focus {
       box-shadow: 0 0 0 0.2rem #0699D1 !important; }
 
+.contact-container {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: space-around;
+  width: 75%;
+}
+
+.contact-section {
+  padding: 150px 0;
+}
+
 .fa {
   color: #FFB515;
+}
+
+.fuel-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 2px;
+  width: 90%;
+}
+
+.fuel-img {
+  height: 200px;
+  margin: 0px 20px;
+}
+
+.fuel-item {
+  align-items:center;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  margin-top: 20px;
+}
+
+.fuel-text {
+  width: 600px;
 }
 
 .popup-gallery {
@@ -68,7 +115,7 @@ align-items: stretch;
 
 
 .portfolio-box {
-    height: 500px;
+    height: 275px;
     max-width: 375px;
 }
 
@@ -82,13 +129,12 @@ align-items: stretch;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 500px;
+    height: 275px;
     background: black;
 }
 
 .portfolio-img {
-  height: 250px;
-  width: 375px;
+  height: 275px;
 }
 
 .shadow {
